docs: fix wrapping (#914)

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -352,11 +352,12 @@ h5 {
 
 .pipe-list {
   padding-top: 0 !important;
-  line-height: 1.2em;
+  line-height: 1.5em;
   text-align: center;
 
   li {
     display: inline;
+    white-space: nowrap;
 
     &:not(:last-child):after {
       content: " | ";
@@ -384,13 +385,13 @@ h5 {
   overflow: hidden;
   text-overflow: ellipsis;
   text-align: center;
-  line-height: 1.2;
+  line-height: 1.3;
 
-  width: 11.6rem;
+  width: 9.4rem;
   height: 6rem;
 
-  margin: 0.65rem;
-  padding: 0.8rem;
+  margin: 0.5rem;
+  padding: 0.7rem;
   border-radius: 1.2rem;
 
   @include small {
